<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.socialapp.eventmanager.MainActivity" >

    <item
        android:id="@+id/action_add"
        android:showAsAction="withText|ifRoom"
        android:title="@string/action_add"/>
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
	<item
        android:id="@+id/action_about_us"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_about_us"/>
	<item
        android:id="@+id/action_rate_app"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_rate_app"/>
</menu>
